force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/Krow__Scheduled_Klient_Survey__c.object-meta.xml
<CustomObject>
    <description>To store Scheduled Klient Survey Details.</description>
    <label>Scheduled Klient Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Scheduled Klient Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Klient Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>