force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to store Account Id.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheduled Klient Surveys</relationshipLabel>
    <relationshipName>Scheduled_Klient_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>