force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Archived__c.field-meta.xml
<CustomField>
    <fullName>Krow__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to archive Scheduled Klient Survey.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>