force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__First_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Krow__First_Survey_Sent__c</fullName>
    <description>used to store first survey sent DateTime.</description>
    <label>First Survey Sent</label>
    <type>DateTime</type>
</CustomField>