force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Is_Additional__c.field-meta.xml
<CustomField>
    <fullName>Krow__Is_Additional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to show Scheduled Klient Survey is created for Additional Email Address.</description>
    <label>Is Additional</label>
    <type>Checkbox</type>
</CustomField>