force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Klient_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Klient_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to store project Id.</description>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Scheduled Klient Surveys</relationshipLabel>
    <relationshipName>Scheduled_Klient_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>