force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Klient_Survey_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Klient_Survey_Schedule__c</fullName>
    <description>used to store Klient Survey Schedule Id.</description>
    <label>Klient Survey Schedule</label>
    <referenceTo>Krow__Klient_Survey_Schedule__c</referenceTo>
    <relationshipLabel>Scheduled Klient Surveys</relationshipLabel>
    <relationshipName>Scheduled_Klient_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>