force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Last_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Last_Survey_Sent__c</fullName>
    <description>used to store last survey sent dateTime.</description>
    <label>Last Survey Sent</label>
    <type>DateTime</type>
</CustomField>