force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Next_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Next_Survey_Sent__c</fullName>
    <description>used to store next survey sent dateTime.</description>
    <label>Next Survey Sent</label>
    <type>DateTime</type>
</CustomField>