force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Number_of_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Krow__Number_of_Recipient__c</fullName>
    <description>used to store number of recipient related to Scheduled Klient Survey.</description>
    <label>Number of Recipient</label>
    <summaryForeignKey>Krow__Scheduled_Klient_Survey_Recipient__c.Krow__Scheduled_Klient_Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>