force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Reference_Date__c</fullName>
    <description>This field is used to store reference date for calculating Next Survey Sent Date and Send Surveys.</description>
    <label>Reference Date</label>
    <type>DateTime</type>
</CustomField>