force-app/main/default/objects/Krow__Scheduled_Klient_Survey__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <description>This field shows Scheduled Klient Survey related to Object.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>